# systemintegration_KEA

./: .gitignore  README.md  System Integration.sln  pip  systemintegration_KEA.sln  text.txt
00._Assignments/02._/: package-lock.json  package.json
00._Assignments/03._/python/: dataParser.py  main.py  pyproject.toml
00._Assignments/05._pair/: app.js  orders.db  package-lock.json
00._Assignments/05a._pair/: package.json
00._Assignments/08._a/: dump.sql
00._Assignments/09._Documentation/: Documentation_link.txt
01._Miscellanious/: getGoogleHomepage.sh  paymentiframe.html
02._Data_Files/: me.xml  package-lock.json  package.json  reader_parser.js  reader_parser.mjs  reader_parser.py
02._Data_Files/CSparser/: CSparser.csproj  reader_parser.cs
03._Modules/html_no_modules/: index.html  myModule.js
03._Modules/html_with_modules/: index.html  index.js  myModule.js
03._Modules/node_commonjs_modules/: index.js  myModule.js
03._Modules/node_es_modules/: index.js  myModule.js
03._Modules/python_modules/: main.py
04._Encoding_Decoding/node/: index.js
04._Encoding_Decoding/python/: main.py
05._Python_Environments/02._Pipenv_Environment/: main.py
05._Python_Environments/03._Poetryenv_Environment/: pyproject.toml
06._Servers/node/: app.js
06._Servers/node_test/: app.js  package-lock.json
06._Servers/python/: main.py  pyproject.toml
08._Server-To-Server/node/: app.js
08._Server-To-Server/python/: main.py  pyproject.toml
09._Environments_Variables/node/: index.js  package.json
09._Environments_Variables/python/: main.py  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js
12._Long_Polling/node/: app.js
13._Server-sent_Events/node/: app.js
14._Websockets/node/: clients.js  index.html  server.js
14._Websockets/python-fastapi/: connection_managaer.py  main.py  pyproject.toml
14._Websockets/python-plain/: pyproject.toml
16._Cors/node/: index.html  package.json  server.js
16._Cors/python-cors/: main.py  pyproject.toml
17._Multipart-Forms/: index.html
17._Multipart-Forms/node/: app.js  package-lock.json  package.json
17._Multipart-Forms/python-multi/: main.py  pyproject.toml
18._Images/: base64.html
19._Audio/: index.html
20._MPEG_DASH/: app.js
25._OpenAPI/node-OpenAPI/: app.js
25._OpenAPI/python-OpenAPI/: main.py  openapi.json  pyproject.toml
27._Web_Scraping_Crawling/python-webscraper/: main.py  pyproject.toml
(+125 files in other folders)
