[tool.poetry]
name = "03-poetryenv-environment"
version = "0.1.0"
description = ""
authors = ["Betül Iskender <betul.iskender@outlook.dk>"]
readme = "README.md"
packages = [{include = "03"}]

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
