[tool.poetry]
name = "python-cors"
version = "0.1.0"
description = ""
authors = ["Betül Iskender <betul.iskender@outlook.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
