[tool.poetry]
name = "01"
version = "0.1.0"
description = ""
authors = ["Betül Iskender <betul.iskender@outlook.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
requests = "^2.31.0"
xmltodict = "^0.13.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
